--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -38,9 +38,8 @@ dependencies {
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0'
   // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
  compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.0'
-  
-   
-   
+
+    implementation 'com.google.code.gson:gson:2.8.6'
     
     
 }
